# panic_mode

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md  READ_HOW_IT_WORKS.md  arch.txt  install.sh  panicmode.service
.github/: copilot-instructions.md
examples/: basic.yaml  config.yaml  mass_freeze.yaml  minimal.yaml
src/: config.rs  main.rs  mass_freez.yaml  storage.rs
src/action/: builder.rs  executor.rs  mod.rs  registry.rs  result.rs  trait.rs
src/action/implementations/: firewall.rs  mod.rs  process.rs  script.rs  snapshot.rs
src/action/middleware/: breaker.rs  mod.rs
src/alert/: mod.rs
src/ctl/: mod.rs
src/detector/: anomaly.rs  circuit_breaker.rs  mod.rs  rules.rs  state.rs
src/monitor/: auth.rs  cpu.rs  custom_metrics.rs  disk_io.rs  file_watcher.rs  memory.rs  mod.rs  network.rs
